// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainMenuIcon should be rendered correctly 1`] = `
<div
  className="root icon-color-gray60 uui-button-box uui-enabled container"
  href={null}
  onClick={[Function]}
  onKeyDown={[Function]}
  role="button"
  tabIndex={null}
>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  >
    <svg
      className=""
      height={24}
      viewBox="0 0 12 24"
      width={12}
    >
      <use
        xlinkHref="#calendar-18.svg"
      />
    </svg>
  </div>
</div>
`;

exports[`MainMenuIcon should be rendered correctly 2`] = `
<a
  className="root icon-color-gray60 uui-button-box uui-enabled -clickable container"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="link"
  tabIndex={null}
  target="_blank"
>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  >
    <svg
      className=""
      height={24}
      viewBox="0 0 12 24"
      width={12}
    >
      <use
        xlinkHref="#calendar-18.svg"
      />
    </svg>
  </div>
</a>
`;
